# SerialProxy

./: .gitignore  HISTORY  HOWTO.md  Makefile  README  README.md  TODO  disp_basic.cpp  disp_basic.h  disp_ncurses.cpp  disp_ncurses.h  main.cpp  run.sh  sersniff.8  sersniff.c  sersniff.cpp  sersniff.h  tcp.cpp  tcp.h
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/assets/: armhf-cross-toolchain.cmake.tc
.github/workflows/: build-binaries.yml  build-container.yml  build.yml
config/: crossbuild.cmake.tc
etc/udev/rules.d/: 80-serial-proxy.rules
greengrass/: CMakeLists.txt  main.cpp
scripts/: install-cross-toolchain-armhf.sh  install-dependencies.sh  install-from-release.sh  reload-udev-rules.sh
